# agent-os

./: .gitignore  DEVELOPMENT_PROMPT.md  README.md  REQUIREMENTS.md  SPEC.md  TODO.md
kernel-module/: Makefile  agent_os.c
runtime/: Cargo.toml  agent-os.toml  agent-os.yml
runtime/src/: main.rs
scripts/: create-dev-vm.sh
