[package]
name = "agent-os"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Delano <tyler@tylerdelano.com>"]
description = "An operating system for autonomous AI agents"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
